479-user-pics-misaligned-in-issues-assignment-view

--- a/src/avatars/avatar-stack.scss
+++ b/src/avatars/avatar-stack.scss
@@ -56,7 +56,7 @@
     // stylelint-enable selector-max-type
 
     // Account for 4+ avatars
-    &:nth-child(n+4) {
+    &:nth-child(n + 4) {
       display: none;
       opacity: 0;
     }
@@ -68,7 +68,7 @@
       margin-right: 3px;
     }
 
-    .avatar:nth-child(n+4) {
+    .avatar:nth-child(n + 4) {
       display: flex;
       opacity: 1;
     }
@@ -117,6 +117,10 @@
       margin-right: 0;
       // stylelint-disable-next-line primer/spacing
       margin-left: 3px;
+    }
+
+    &:last-child {
+      border-left: 0;
     }
   }
 
